Fixed center alignment with wallet container

--- a/src/HomePage/scss/HomeContent.scss
+++ b/src/HomePage/scss/HomeContent.scss
@@ -77,7 +77,7 @@
       &__contact {
         width: 100%;
         &__wallet {
-          grid-template-columns: auto 75%;
+          grid-template-columns: auto auto;
           justify-content: center;
           &__image {
             justify-self: center;
